--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install . --use-mirrors
-  - pip install -r requirements.txt
+  - pip install -q . --use-mirrors
+  - pip install -q -r requirements.txt
 script:
   - python manage.py test
