--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ env:
 install:
   - pip install -q -r requirements.txt
 script:
-  coverage run --source=cellars python manage.py test
+  coverage run --source=authtokens,search,users manage.py test
 after_success:
   coveralls
