--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Django==1.7.1
+PyYAML==3.11
 boto==2.6.0
+coverage==3.7.1
 coveralls==0.5
 django-activity-stream==0.5.1
 django-jsonfield==0.9.13
+docopt==0.6.2
 mock==1.0.1
 requests==2.5.1
 wsgiref==0.1.2
