--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coverage==3.7.1
 coveralls==0.5
 django-activity-stream==0.5.1
 django-jsonfield==0.9.13
+django-localflavor==1.1
 docopt==0.6.2
 mock==1.0.1
 requests==2.5.1
